2006-03-07 Alasdair Allan <aa@astro.ex.ac.uk>

	* bin/event_broker.pl: Added SOAP server, this will have a method
	  which will allow us to injecct VOEvent messages into the broker,
	  efectively making the Broker a publisher. This will be the default
	  publication route for eSTAR native messages.
	  
	* eSTAR/Broker/Handler.pm: Added standard skeleton and additionally a
	  handle_voevent() callback to take an "event", parse and ship to the
	  running hash of the broker.
	  	
	* eSTAR/Broker/SOAP/Daemon.pm: Threaded SOAP daemon.
	
	* eSTAR/Broker/SOAP/Handler.pm: SOAP wrapper for the Handler.
	
	* bin/soap_client.pl: If we pass a filename to the soap client it
	  will make the content arg2 if we've already defined an arg1 and
	  not default it to make this arg1 in all cases.
	  
	* bin/ogle_parsemail.pl: Script to be run from .procmailrc file to
	  parse mail incoming to estar@estar.astro.ex.ac.uk and pull all the
	  OGLE III EWS messages, parse them and forward them to the eSTAR
	  event_broker which now has a SOAP port (on 9099) 
	  
	* bin/test_servers.pl: Added pinging of event_broker.pl now it has
	  an embedded SOAP port.
	  
	* eSTAR/Config.pm: Infrastructre support for event broker pinging    
	
2006-02-27 Alasdair Allan <aa@astro.ex.ac.uk>

        * bin/node_agent.pl: Made remote TCP host and port setable via the
          command line, overriding the config file values.
          
        * eSTAR/NA/Handler.pm: Updated project lookups.
        
        * bin/user_agent.pl: Default nodes now LTproxy and FTNproxy, added
          settings from username and email address to command line.  

2006-02-15 Alasdair Allan <aa@astro.ex.ac.uk>

	* bin/jach_agent.pl: Changed mapping to new project IDs

	* bin/test_templates.pl: Changed to Cc the estar-devel list

	* eSTAR/JAC/Handler.pm: Ignore filters when checking observability

2006-01-20 Alasdair Allan <aa@astro.ex.ac.uk>

        * bin/event_broker.pl: Fixed IVORNs

	* bin/event_test.pl: Fixed IVORNs
